Kommentar geändert copyrightzeichen

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <hr />
                 <h2>Folio &horbar; ©</h2>
 
-                <!-- Alternative Schriftart für Copyright-Zeichen -->
+                <!-- Alternative Schriftart für das Copyright-Zeichen -->
                 <!-- <h2>Folio<span></span></h2>
           <h2 class="copyright">&copy;</h2> -->
 
