test upload macbook air

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         Victor Folio <br />
                         2019"
                     </h2>
-                    <img src="assets/images/bg-nicole-1.jpg" alt="bbeautiful runette woman in black swimsuit posing sexy, wearing
+                    <img src="assets/images/bg-nicole-1.jpg" alt="beautiful runette woman in black swimsuit posing sexy, wearing
                         big earring jewelry and bangles jewelry" />
                 </div>
                 <div class="righty">
