--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             <div class="footer-nav">
                 <ul>
                     <li>
-                        <a href="mailto:someone@yoursite.com?subject=RUF' MICH AN!">Email</a>
+                        <a href="mailto:someone@yoursite.com?subject=RUF-MICH-AN!">Email</a>
                     </li>
                     <li>
                         <a href="https://dribbble.com/" target="_blank">Dribbble</a>
