aria-label test

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="release">
             <div class="release-title">
                 <h3>.01</h3>
-                <h2 aria-label="Release">
+                <h2 aria-label="Release" role="heading">
                     <span aria-hidden="true">
                         <span>Relea<span class="linebreak">se</span></span>
                     </span>
@@ -84,7 +84,7 @@
         <section class="works">
             <div class="works-title">
                 <h3>.02</h3>
-                <h2 aria-label="Works">
+                <h2 aria-label="Works" role="heading">
                     <span aria-hidden="true">
                         <span>Wor<span class="linebreak">ks</span></span>
                     </span>
@@ -137,7 +137,7 @@
         <section class="contact">
             <div class="contact-title">
                 <h3>.03</h3>
-                <h2 aria-label="Contact">
+                <h2 aria-label="Contact" role="heading">
                     <span aria-hidden="true">
                         <span>Conta<span class="linebreak">ct</span></span>
                     </span>
