--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <section class="release">
             <div class="release-title">
                 <h3>.01</h3>
-                <h2 aria-label="Release" role="heading">
-                    <span aria-hidden="true">
-                        <span>Relea<span class="linebreak">se</span></span>
-                    </span>
+                <h2>
+
+                    Relea<span class="linebreak">se</span>
+
                 </h2>
             </div>
             <div class="release-text">
@@ -84,10 +84,10 @@
         <section class="works">
             <div class="works-title">
                 <h3>.02</h3>
-                <h2 aria-label="Works" role="heading">
-                    <span aria-hidden="true">
-                        <span>Wor<span class="linebreak">ks</span></span>
-                    </span>
+                <h2>
+
+                    Wor<span class="linebreak">ks</span>
+
                 </h2>
             </div>
             <div class="works-text">
@@ -137,10 +137,10 @@
         <section class="contact">
             <div class="contact-title">
                 <h3>.03</h3>
-                <h2 aria-label="Contact" role="heading">
-                    <span aria-hidden="true">
-                        <span>Conta<span class="linebreak">ct</span></span>
-                    </span>
+                <h2>
+
+                    Conta<span class="linebreak">ct</span>
+
                 </h2>
             </div>
             <div class="contact-text">
