--- a/index.html
+++ b/index.html
@@ -42,11 +42,7 @@
         <section class="release">
             <div class="release-title">
                 <h3>.01</h3>
-                <h2>
-
-                    Relea<span class="linebreak">se</span>
-
-                </h2>
+                <h2>Relea<span class="linebreak">se</span></h2>
             </div>
             <div class="release-text">
                 <p>
@@ -84,11 +80,7 @@
         <section class="works">
             <div class="works-title">
                 <h3>.02</h3>
-                <h2>
-
-                    Wor<span class="linebreak">ks</span>
-
-                </h2>
+                <h2>Wor<span class="linebreak">ks</span></h2>
             </div>
             <div class="works-text">
                 <p>
@@ -137,11 +129,7 @@
         <section class="contact">
             <div class="contact-title">
                 <h3>.03</h3>
-                <h2>
-
-                    Conta<span class="linebreak">ct</span>
-
-                </h2>
+                <h2>Conta<span class="linebreak">ct</span></h2>
             </div>
             <div class="contact-text">
                 <p>
